replace postgres to elastic
